Fix alignment issues

--- a/client/src/components/MainContent/MainContent.sass
+++ b/client/src/components/MainContent/MainContent.sass
@@ -8,7 +8,7 @@
 .main-content-inner-wrapper
   display: flex
   flex-direction: column
-  min-height: 100%
+  max-height: 100%
 
 .main-content-header
   padding: 0.75rem 1.5rem
