--- a/client/src/components/Topbar/Topbar.sass
+++ b/client/src/components/Topbar/Topbar.sass
@@ -36,3 +36,6 @@
         border-radius: 9999px
         flex-shrink: 0
         max-width: 100%
+
+.bp4-overlay
+  z-index: 100 !important
